--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kucharka">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Kucharka">
-        <activity android:name=".AlergenyActivity"></activity>
+        <activity android:name=".NakupnyZoznamActivity"></activity>
+        <activity android:name=".AlergenyActivity" />
         <activity android:name=".UpdateReceptActivity" />
         <activity android:name=".activity.AddingReceptActivity" />
         <activity android:name=".ReceptActivity" />
